# chessSDL2

./: CMakeLists.txt  legalMoves.cpp  legalMoves.h  main.cpp
